feat: Added more hints on teleports for Lost City